# rust-memo

./: Cargo.toml  README.md
crates/adapter_fs/: Cargo.toml
crates/adapter_fs/src/adapter/: fs.rs
crates/adapter_fs/src/adapter/fs/: page_repository.rs
crates/application/: Cargo.toml
crates/application/src/: adapter.rs  app.rs  command.rs  helpers.rs  main.rs  template.rs  url_helpers.rs
crates/application/src/command/: create.rs  edit.rs  ensure_links.rs  insert_links.rs  link.rs  list.rs  list_title.rs  mod.rs  new.rs  search.rs  server.rs  title.rs
crates/application/src/command/server/: handler.rs
crates/application/src/command/server/handler/: index.rs  page.rs  page_create.rs  page_list.rs  page_update.rs  page_view.rs  pages.rs  title.rs  title_list.rs  title_page_list.rs  title_pages.rs  title_view.rs  titles.rs
crates/application/src/entity/: mod.rs  page_title.rs
crates/application/src/handler/: mod.rs  page.rs  title.rs
crates/application/src/use_case/: get_title.rs  list.rs  list_title.rs  mod.rs
crates/application/src/use_case/port/: repository.rs
crates/application/templates/: page.html  pages.html  title-not-found.html  title-pages.html  title.html  titles.html
crates/entity/: Cargo.toml
crates/entity/src/: entity.rs
crates/entity/src/entity/: column_number.rs  line_number.rs  page.rs  page_content.rs  page_graph.rs  page_id.rs  page_id_or_page_title.rs  page_link.rs  page_path.rs  page_title.rs  query.rs  title_path.rs
crates/use_case/: Cargo.toml
crates/use_case/src/: lib.rs  port.rs  use_case.rs
crates/use_case/src/port/: page_repository.rs  repository.rs
crates/use_case/src/use_case/: edit.rs  edit_page_use_case.rs  ensure_links_use_case.rs  list_pages_use_case.rs  list_titles_use_case.rs  new_page_use_case.rs
src/: handler_helpers.rs  helpers.rs  main.rs  page_id.rs  page_title.rs  template.rs  url.rs  url_helpers.rs
src/command/: edit.rs  insert_links.rs  link.rs  list.rs  list_title.rs  mod.rs  new.rs  server.rs
src/entity/: mod.rs  page_id.rs
src/handler/: index.rs  mod.rs  page.rs  pages.rs  title.rs  titles.rs
src/use_case/: list.rs  list_title.rs  mod.rs
templates/: index.html  page.html  pages.html  title-not-found.html  title.html  titles.html
