[package]
name = "rust-memo"
version = "0.1.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
chrono = "0.4.13"
actix-web = "2.0.0"
actix-rt = "1.1.1"
pulldown-cmark = "0.7.2"
percent-encoding = "2.1.0"
askama = "0.10.3"
regex = "1.3.9"
