[package]
name = "adapter_fs"
version = "0.0.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
entity = { path = "../entity" }
use_case = { path = "../use_case" }

[dev-dependencies]
anyhow = "1.0.45"
tempfile = "3.2.0"
