[package]
name = "rust-memo"
version = "0.6.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
actix-web = "2.0.0"
actix-rt = "1.1.1"
entity = { path = "../entity" }
pulldown-cmark = "0.8.0"
percent-encoding = "2.1.0"
askama = "0.10.3"
listenfd = "0.3.3"
url = "2.1.1"
anyhow = "1.0.45"
regex = "1.5.4"
structopt = "0.3.25"
