[package]
name = "entity"
version = "0.0.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
pulldown-cmark = "0.8.0"
regex = "1.5.4"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.45"
