[package]
name = "use_case"
version = "0.0.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
entity = { path = "../entity" }

[dev-dependencies]
anyhow = "1.0.45"
